<resources>
    <string name="app_name">Document Wallet</string>

    <!--Config File-->
    <string name="fireBaseUrl">https://qdocker-4fd2f.firebaseio.com</string>
    <string name="fireBaseStorageUrl">gs://qdocker-4fd2f.appspot.com</string>
    <string name="about">About</string>
    <string name="snack_error_network">Please turn on your net.</string>
    <string name="snack_error_network_available">Thanks for turning on the Network.</string>

    <!--Sign In Page -->
    <string name="bottomDescription"><b>Why Sign Up?</b> \n By signing up with us, users will be able to follow and interact with their favorite churches better and will help us provide you with the best user experience.</string>
    <string name="googleSignText">Sign in with Google</string>
    <string name="snack_error_acct">An account already exists with the same email address but different provider.</string>
    <string name="snackOkBtn">ok</string>
    <string name="sharedPrefFileUserName">UserDetails</string>
    <string name="sharedPrefFileAdmin">AdminDetails</string>

    <!--Admin About Page-->
    <string name="adminAboutContent">Starting with the Pentium Pro, and the AMD Athlon, x86 processors support 4 MiB pages (called Page Size Extension) (2 MiB pages if using PAE) in addition to their standard 4 KiB pages; newer x86-64 processors, such as AMDs newer AMD64 processors and Intels Westmere[25] and later Xeon processors can use 1 GiB pages in long mode. IA-64 supports as many as eight different page sizes, from 4 KiB up to 256 MiB, and some other architectures have similar features.[specify]Larger pages, despite being available in the processors used in most contemporary personal computers, are not in common use except in large-scale applications, the applications typically found in large servers and in computational clusters, and in the operating system itself. Commonly, their use requires elevated privileges, cooperation from the application making the large allocation (usually setting a flag to ask the operating system for huge pages), or manual administrator configuration; operating systems commonly, sometimes by design, cannot page them out to disk.However, SGI IRIX has general-purpose support for multiple page sizes. Each individual process can provide hints and the operating system will automatically use the largest page size possible for a given region of address space.[26]Linux has supported huge pages on several architectures since the 2.6 series via the hugetlbfs filesystem[27] and without hugetlbfs since 2.6.38.[28] Windows Server 2003 (SP1 and newer), Windows Vista and Windows Server 2008 support huge pages under the name of large pages. Windows 2000 and Windows XP support large pages internally,[29] but do not expose them to applications. Solaris beginning with version 9 supports large pages on SPARC and x86.[30][31] FreeBSD 7.2-RELEASE features superpages.[32] Note that until recently in Linux, applications needed to be modified in order to use huge pages. The 2.6.38 kernel introduced support for transparent use of huge pages.[28] On Linux kernels supporting transparent huge pages, as well as FreeBSD and Solaris, applications take advantage of huge pages automatically, without the need for modification</string>

    <!--User About Page-->
    <string name="userAboutContent">Starting with the Pentium Pro, and the AMD Athlon, x86 processors support 4 MiB pages (called Page Size Extension) (2 MiB pages if using PAE) in addition to their standard 4 KiB pages; newer x86-64 processors, such as AMDs newer AMD64 processors and Intels Westmere[25] and later Xeon processors can use 1 GiB pages in long mode. IA-64 supports as many as eight different page sizes, from 4 KiB up to 256 MiB, and some other architectures have similar features.[specify]Larger pages, despite being available in the processors used in most contemporary personal computers, are not in common use except in large-scale applications, the applications typically found in large servers and in computational clusters, and in the operating system itself. Commonly, their use requires elevated privileges, cooperation from the application making the large allocation (usually setting a flag to ask the operating system for huge pages), or manual administrator configuration; operating systems commonly, sometimes by design, cannot page them out to disk.However, SGI IRIX has general-purpose support for multiple page sizes. Each individual process can provide hints and the operating system will automatically use the largest page size possible for a given region of address space.[26]Linux has supported huge pages on several architectures since the 2.6 series via the hugetlbfs filesystem[27] and without hugetlbfs since 2.6.38.[28] Windows Server 2003 (SP1 and newer), Windows Vista and Windows Server 2008 support huge pages under the name of large pages. Windows 2000 and Windows XP support large pages internally,[29] but do not expose them to applications. Solaris beginning with version 9 supports large pages on SPARC and x86.[30][31] FreeBSD 7.2-RELEASE features superpages.[32] Note that until recently in Linux, applications needed to be modified in order to use huge pages. The 2.6.38 kernel introduced support for transparent use of huge pages.[28] On Linux kernels supporting transparent huge pages, as well as FreeBSD and Solaris, applications take advantage of huge pages automatically, without the need for modification</string>

    <!--Admin Fragment Page-->
    <string name="storage_permission">Please allow Storage Permission</string>

    <!--Admin Detail Add Page-->
    <string name="submit">submit</string>
    <string name="AdminQRCode">organization Type</string>
    <string name="AdminID">Reg No</string>
            <!-- Navigation Drawer -->
            <string name="drawer_open">Open navigation drawer</string>
            <string name="drawer_close">Close navigation drawer</string>

    <!--User View Doc -->
    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>
    <string name="snackUploadSuccessMsg">Your upload iS successful. Please go to view upload page to see the uploaded files.</string>
    <string name="snackUploadUnSuccessMsg">Your upload iS Unsuccessful. Please Check Net Connections.</string>
    <string name="snack_error_message_noList">Please Pick the required doc.</string>
    <string name="error_message_permission_camera">Please allow to use Camera.</string>


    <!--Email Details -->
    <string name="email_subject">Feed Back</string>
    <string name="email_content">Please Enter Ur Feed Back.</string>
    <string name="email_dialog_heading">Send Email.</string>

    <string name="email_1">nirmal@gmail.com</string>
    <string-array name="emailAddresses">
        <item>@string/email_1</item>
    </string-array>

    <!--Nav Drawer Admin list -->
    <string name="adminProfile">Profile</string>
    <string name="adminSettings">Settings</string>
    <string name="adminAbout">About</string>
    <string name="adminFeedBack">Feed Back</string>
    <string name="adminLogout">Logout</string>

    <!--Nav Drawer User list -->
    <string name="userProfile">Profile</string>
    <string name="userSettings">Settings</string>
    <string name="userAbout">About</string>
    <string name="userFeedBack">Feed Back</string>
    <string name="userLogout">Logout</string>


    <!-- QR Module-->
    <string name="scan_hint">Scan Barcode</string>
    <string name="flash_light">Flash Light</string>

    <!--QR Tester-->
    <string name="start_scan">Start Scan</string>
    <string name="scan_result">Scan Result Here</string>
    <string name="input_content">Input Content(Required)</string>
    <string name="ecc">Error Correction Level(Default:L(~7%))</string>
    <string name="overlay_on">Overlay:ON</string>
    <string name="overlay_off">Overlay:OFF</string>
    <string name="overlay_xfermode">Overlay Xfermode</string>
    <string name="footnote">Footnote(Feature Under Develop)</string>
    <string name="input_qrsize">Qr Image Size(Required)</string>
    <string name="input_margin">QrCode Margin(Default:2)</string>
    <string name="title_qr_color">Set Qr Code Color.Default is Black(0,0,0)</string>
    <string name="input_color_r">R(0~255)</string>
    <string name="input_color_g">G(0~255)</string>
    <string name="input_color_b">B(0~255)</string>
    <string name="title_qr_bg_color">Set Qr Code Background Color.Default is White(255,255,255)</string>
    <string name="input_bgColor_r">R(0~255)</string>
    <string name="input_bgColor_g">G(0~255)</string>
    <string name="input_bgColor_b">B(0~255)</string>
    <string name="start_generate">Generate!</string>
    <string name="overlay_size">Over Size(Required If Overlay has Set)</string>
    <string name="overlay_alpha">Overlay Alpha,Default:255(Opaque)</string>
    <string name="action_clear">Clear</string>
    <string name="action_generate">Generate</string>
    <string name="hint_alpha">0~255</string>
    <string name="qr_code_generate_placeholder">Generated QrCode.</string>
</resources>
