<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="none">

        <item
            android:id="@+id/userUpdateProfile"
            android:checked="false"
            android:icon="@drawable/edit_icon"
            android:title="@string/userProfile" />
    </group>
    <group
        android:id="@+id/menuAbout"
        android:checkableBehavior="single">


        <item
            android:id="@+id/userAbout"
            android:checked="false"
            android:icon="@drawable/info_icon"
            android:title="@string/userAbout" />
    </group>
    <group
        android:id="@+id/menuFeed"
        android:checkableBehavior="single">


        <item
            android:id="@+id/userFeed"
            android:checked="false"
            android:icon="@drawable/ic_feedback"
            android:title="@string/userFeedBack" />
    </group>
    <group
        android:id="@+id/menuLogout"
        android:checkableBehavior="single">


        <item
            android:id="@+id/userLogout"
            android:checked="false"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/userLogout" />
    </group>

</menu>