<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="none">

        <item
            android:id="@+id/adminUpdateProfile"
            android:checked="false"
            android:icon="@drawable/edit_icon"
            android:title="@string/adminProfile" />
    </group>
    <group
        android:id="@+id/menuAbout"
        android:checkableBehavior="single">


        <item
            android:id="@+id/adminAbout"
            android:checked="false"
            android:icon="@drawable/info_icon"
            android:title="@string/adminAbout" />
    </group>

    <group
        android:id="@+id/menuFeed"
        android:checkableBehavior="single">


        <item
            android:id="@+id/adminFeed"
            android:checked="false"
            android:icon="@drawable/ic_feedback"
            android:title="@string/adminFeedBack" />
    </group>
    <group
        android:id="@+id/menuLogout"
        android:checkableBehavior="single">


        <item
            android:id="@+id/adminLogout"
            android:checked="false"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/adminLogout" />
    </group>

</menu>